--- a/provider-comparison.ipynb
+++ b/provider-comparison.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "march_records = requests.get(\"https://commoncrawl.s3.amazonaws.com/?prefix=crawl-data/CC-NEWS/2020/3\")"
+    "march_records = requests.get(\"https://commoncrawl.s3.amazonaws.com/?prefix=crawl-data/CC-NEWS/2020/03\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,11 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "urls = [\"https://commoncrawl.s3.amazonaws.com/{}\".format(i.text) for i in soup.find_all(\"key\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "441"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "len(urls)"
    ]
   },
   {
